--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.14",
     "@types/redux-logger": "^3.0.8",
+    "@xstate/react": "^1.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux-logger": "^3.0.6",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xstate": "^4.15.2"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
