--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@manaflair/redux-batch": "^1.0.0",
     "@material-ui/core": "^4.11.2",
+    "@react-native-community/async-storage": "^1.12.1",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
@@ -16,11 +18,13 @@
     "@types/react-redux": "^7.1.14",
     "@types/redux-logger": "^3.0.8",
     "@xstate/react": "^1.2.2",
+    "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "xstate": "^4.15.2"
